--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^14.0.0",
+    "axios": "^1.3.5",
     "msw": "^1.2.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.7.3",
@@ -30,6 +31,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "axios": "axios/dist/node/axios.cjs"
+    }
   },
   "devDependencies": {
     "@testing-library/dom": "^9.2.0",
