--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
     "@testing-library/user-event": "^14.4.3",
     "eslint-plugin-jest-dom": "^4.0.2",
     "eslint-plugin-testing-library": "^5.5.1"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
